k8s/minikube/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
#  namespace: app-ns
spec:
  selector:
    matchLabels:
      component: mysql-db
  replicas: 1
  template:
    metadata:
      labels:
        component: mysql-db
    spec:
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
      containers:
        - name: mysql-srv
          image: mysql
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
