k8s/minikube/netinfo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netinfo-deployment
#  namespace: app-ns
spec:
  selector:
    matchLabels:
      component: netinfo-app
  replicas: 2
  template:
    metadata:
      labels:
        component: netinfo-app
    spec:
      containers:
        - name: netinfo-app
          image: gcp-k8s-spring_netinfo
          imagePullPolicy: Never
          ports:
            - containerPort: 8086
