k8s/minikube/mysql-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: mysql-db
  ports:
    - port: 3306
      targetPort: 3306
