k8s/minikube/netinfo-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netinfo-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: netinfo-app
  ports:
    - port: 8086
      targetPort: 8086
